--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,21 @@
 body{
+    background:  grey;
     color: #333;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
 #cabecera{
-    background: blue;
+    background: cornflowerblue  ;
     box-shadow: 0px 2px 20px 0px darkgray;
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline{
@@ -30,4 +35,8 @@ body{
 #container h1{
     font-size: 20px;
 
+}
+#post{
+    background: white;
+    padding: 1em;
 }
