--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background:  grey;
+    background:  white;
     color: #333;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
